---------------------------------------------------------------------------------------------------
Version: 2.1.9
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.8
Date: 2020-10-10
  Changes:
    - Fixed that raw coal wasnt set to spawn in the start area and had a low probability of spawning at all.
---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: 2020-10-06
  Changes:
    - Update ore generation code.
    - Updated factorio version to 1.0.
---------------------------------------------------------------------------------------------------
Version: 2.1.6
Date: 2020-08-26
  Changes:
    - Remove high grade to sintered recipes.
    - Rebalanced chromite grade 3 to chromite sand.
    - Adjusted sintered nexelit to molten nexelit to be in line with the rest.
    - Adjusted and rebalanced tier 3 and 4 of raw coal processing to be better.
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2020-08-13
  Changes:
    - rebalanced the rebalance of the chromium plate processing chains to give more plates per tier.
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2020-08-13
  Changes:
    - Adjusted titanium overflow to need both processing chains to get the most plate per ore.
    - rebalanced all of the chromium plate processing chains to give more plates per tier.
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2020-08-09
  Changes:
    - Replaced jig mk01 electric engine unit with reqular engine units.
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2020-08-09
  Changes: